# subtext

./: .gitignore  README.md  faq.md  guide.md  specification.md
archive/: 2021-05-28-multilinks.md  2021-06-01-multilinks.md  README.md  design.md  line-oriented.md
archive/deprecated/: 2021-05-28-multilinks.md  2021-06-01-multilinks.md
archive/explorations/: hashtags.md  kv.md
explorations/: 2021-05-27-poetry.md  2021-05-28-multilinks.md  2021-10-07-slashlinks.md  README.md  doi.md  multi-ref-links.md  wikilink.md
notes/: design.md  refactoring.md
parsers/: subtext.py  subtext_parser.py
parsers/javascript/: CharIterator.js  README.md  index.js  package-lock.json  package.json  utils.js
parsers/javascript/examples/: example.js  example.subtext
parsers/javascript/test/: blank.test.js  block.test.js  parse.test.js  text-content.test.js
parsers/rust/: Cargo.toml  README.md
parsers/rust/examples/: parse.rs
parsers/rust/src/: block.rs  lib.rs  parse.rs  primitive.rs  sequence.rs  util.rs
parsers/rust/src/test/: mod.rs  parse.rs  sequence.rs
parsers/rust/subtext/: Cargo.toml
parsers/rust/subtext/examples/: example.subtext  parse.rs
parsers/rust/subtext/src/: block.rs  lib.rs  parse.rs  predicate.rs  primitive.rs  sequence.rs  slashlink.rs  str.rs  stream.rs  util.rs
parsers/rust/subtext/src/test/: blank.rs  block.rs  mod.rs  parse.rs  primitive.rs  sequence.rs  text_content.rs
rfcs/: 2021-05-24-newlines.md  2021-06-01-blank-lines.md  2021-06-01-multilinks.md  2021-10-07-slashlinks.md  template.md
